# matchviz

./: README.md  pyproject.toml
src/correspondence_viz/: __init__.py  in.xml
src/matchviz/: __init__.py  annotation.py  annotation_writer.py  bigstitcher.py  cli.py  core.py  ng.py  plot.py  schemas.py  transform.py
src/matchviz/examples/: foo.csv  test.ipynb
tests/: conftest.py  test_bigstitcher.py  test_bulk.py  test_bulk_processing.py  test_cli.py  test_viz.py
